# GitFlame-CodeRAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  context.md  data_contracts.md  docker-compose.yml  experiment_manifest.yml  pyproject.toml
configs/: gitflame-codepilot.example.yml  github_repos.example.yml  github_repos.yml  repository.example.yml
datasets/: README.md  dataset_overview.csv
datasets/large_repositories/: MANIFEST.yml
datasets/large_repositories/repo_large_001/: issues.jsonl  repo.yml
docs/: sprint6_http_service.md
experiments/: README.md  experiment_plan.md
migrations/: 001_initial.sql
reports/: final_report.out  final_report.tex  sprint3_karim_deployment_vector_storage.md
reports/figures/: README.md
reports/tables/: ablation_results.tex  dataset_groups.tex  dataset_overview.tex  hyperparameter_grid.tex  language_distribution.tex  significance_tests.tex
scripts/: build_dataset_table.py  build_embedding_cache.py  build_latex_tables.py  build_manifest.py  demo_two_stage.py  fetch_github_dataset.py  index_repository.py  run_original_models_experiment.py  run_two_stage_experiment.py
src/gitflame_coderag/: __init__.py  schemas.py
tests/integration/: test_storage.py
tests/unit/: test_ast_grep_chunking.py  test_config.py  test_context_selection.py  test_evidence.py  test_fallback_chunking.py  test_file_level.py  test_github.py  test_http_api.py  test_http_search_service.py  test_ingestion.py  test_reranker.py  test_retrieval.py  test_two_stage.py  test_two_stage_retrieval.py
(+1974 files in other folders)
