[project]
name = "gitflame-coderag"
version = "0.1.0"
description = "Hybrid code retrieval for GitFlame issue-to-plan and issue-to-code workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ast-grep-py>=0.44.1",
    "fastapi>=0.115",
    "numpy>=2.0",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "sqlalchemy>=2.0",
    "torch>=2.12,<2.13",
    "transformers>=4.45,<4.46",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
gitflame-coderag-api = "gitflame_coderag.api.app:run"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Windows' plain PyPI torch wheels are CPU-only; the CUDA build lives on
# PyTorch's own index. Linux is left on the default PyPI index, whose torch
# wheels already bundle CUDA (see the nvidia-cu13* deps in uv.lock).
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/gitflame_coderag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
